--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
   color: var(--iris);
   font-size: 18px;
   font-weight: 800;
-  line-height: 1, 17;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
@@ -48,12 +48,17 @@ body {
   color: var(--ocean);
 }
 
+.address {
+  font-style: normal;
+}
+
 .address-link {
   color: var(--slate);
   font-family: 'Roboto';
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
+  line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
@@ -83,7 +88,7 @@ body {
   background: var(--iris);
   font-size: 16px;
   font-weight: 500;
-  line-height: 2.4;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   border: none;
 }
@@ -171,7 +176,7 @@ body {
   color: var(--cloud);
   font-size: 16px;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.17;
   letter-spacing: 0.02em;
 }
 
@@ -188,6 +193,13 @@ body {
   border: none;
 }
 
+.btn-menu:focus,
+.btn-menu:hover {
+  color: var(--white);
+  background-color: var(--ocean);
+  cursor: pointer;
+}
+
 .heading-advantages {
   color: var(--navyblue);
   font-size: 20px;
@@ -195,6 +207,7 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
+
 .text-advantages {
   color: var(--slate);
   font-size: 16px;
