--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ body {
   color: var(--cloud);
   font-size: 16px;
   font-weight: 400;
-  line-height: 1.17;
+  line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
@@ -195,8 +195,8 @@ body {
 
 .btn-menu:focus,
 .btn-menu:hover {
-  color: var(--white);
-  background-color: var(--ocean);
+  color: #ffffff;
+  background-color: #404bbf;
   cursor: pointer;
 }
 
