--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ body {
   cursor: pointer;
 }
 
-.heading-advantages {
+.portfolio-title {
   color: var(--navyblue);
   font-size: 20px;
   font-weight: 500;
