--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ body {
   letter-spacing: 0.02em;
 }
 
-.text-advantages {
+.portfolio-paragraph {
   color: var(--slate);
   font-size: 16px;
   font-weight: 400;
